hphp/hack/test/typecheck/call_in_static_shape.php.exp
File "call_in_static_shape.php", line 7, characters 28-33:
Invalid expression in constant initializer (Parsing[1002])
